--- a/CSS Styles/Example 1 - Tags/index.html
+++ b/CSS Styles/Example 1 - Tags/index.html
@@ -1,14 +1,14 @@
 <html>
     <head>
-        <title>CSS Styles</title>
+        <title>CSS Styles - Example 1</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body id="MainPage">
         <!-- each id should be used only once per page -->
-        <h1 id="MainHeading">CSS Styles</h1>
+        <h1 id="MainHeading">CSS Styles - Example 1</h1>
 
         <p id="Content">
-            This sample shows how to style elements on a page using their ids.
+            This sample shows how to style elements on a page using classes.
         </p>
     </body>
 </html>
